Update realisations key
Changes part of:
https://github.com/CABLE-LSM/benchcab/pull/208

--- a/config.yaml
+++ b/config.yaml
@@ -19,14 +19,13 @@ project: w97
 
 experiment: five-site-test
 
-realisations: [
-  {
-    path: "trunk",
-  },
-  {
-    path: "branches/Users/ccc561/v3.0-YP-changes",
-  }
-]
+realisations:
+  - repo:
+      svn:
+        branch_path: trunk
+  - repo:
+      git:
+        branch: main
 
 modules: [
   intel-compiler/2021.1.1,
