--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@
 #
 # Strings can be given with or without double or single quotes.
 
-project: w97
+project: <project>
 
 experiment: five-site-test
 
